--- a/src/app/css/app.css
+++ b/src/app/css/app.css
@@ -10,7 +10,6 @@ body {
   max-width: 100vw;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* For WebKit browsers (Chrome, Safari) */
 }
 body i, body em {
   font-family: var(--font-gantari-italic);
@@ -27,20 +26,38 @@ body .whole {
 }
 body .container {
   justify-content: center;
-  gap: 1em; /* Space between panels */
+  gap: 0.6em; /* Space between panels */
   flex-wrap: wrap; /* Allows items to wrap on smaller screens */
-  display: inline-flex;
+  display: flex;
+}
+body .scroll-list {
+  max-height: 70vh;
+  overflow-y: scroll;
+  --scrollbar-color: $highlight;
+  --scrollbar-bg: $dark;
+  scrollbar-color: transparent transparent; /* Firefox */
+  scrollbar-width: thin;
+  /* For WebKit browsers (Chrome, Safari) */
+}
+body .scroll-list::-webkit-scrollbar {
+  width: 8px;
+}
+body .scroll-list::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0); /* Transparent */
+}
+body .scroll-list::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0); /* Transparent */
 }
 body .panel {
   position: relative;
+  max-height: 100vh;
   overflow: hidden;
-  width: 28%;
-  padding: 0 1em;
+  flex: 1;
+  padding: 0 0.6em;
   transition: max-width 300ms ease-in-out, padding-right 300ms ease-in-out; /* Smooth transition for width and padding */
 }
 body .panel.closed-panel {
   max-width: 2em; /* Width when the panel is closed */
-  padding-right: 0.5em; /* Adjust padding for closed state */
 }
 body .panel.closed-panel .contained {
   display: none; /* Completely hide contained content */
@@ -51,9 +68,10 @@ body .panel.open-panel .contained {
   visibility: visible; /* Ensures elements are visible */
   transition: opacity 300ms ease-in-out; /* Smooth transition for opacity */
 }
+body .panel-control {
+  text-align: center;
+}
 body .contained {
-  border-right: 1px solid rgba(68, 68, 51, 0.4);
-  padding-right: 3em;
   overflow: hidden;
   opacity: 0; /* Start hidden */
   visibility: hidden; /* Prevents interaction when closed */
@@ -62,13 +80,14 @@ body .contained {
 body .player-panel {
   text-align: center;
 }
-body .action-buttons {
+body .search-box, body .action-buttons, body .volume-buttons {
   display: flex;
+  flex-wrap: wrap;
   align-items: center; /* Centers buttons vertically */
-  gap: 10px; /* Optional: Adds spacing between buttons */
-  padding: 0 1em;
+  gap: 0.3em; /* Optional: Adds spacing between buttons */
+  justify-content: center;
 }
-body .action-buttons button {
+body .search-box button, body .action-buttons button, body .volume-buttons button {
   flex: none; /* Ensures buttons don't stretch unevenly */
 }
 body .volume-level {
@@ -150,46 +169,6 @@ body .overlay .action:hover {
 body .album-container {
   position: relative;
   text-align: center;
-}
-body .queue {
-  max-height: 32em;
-  overflow-y: scroll;
-  --scrollbar-color: $highlight;
-  --scrollbar-bg: $dark;
-  scrollbar-width: thin;
-  scrollbar-color: transparent transparent; /* Firefox */
-  padding: 1em;
-  margin: 0 1em;
-  justify-content: space-around;
-  flex: auto;
-  /* For WebKit browsers (Chrome, Safari) */
-}
-body .queue::-webkit-scrollbar {
-  width: 8px;
-}
-body .queue::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0); /* Transparent */
-}
-body .queue::-webkit-scrollbar-track {
-  background-color: rgba(0, 0, 0, 0); /* Transparent */
-}
-body .search {
-  max-height: 32em;
-  max-width: 28em;
-  overflow-y: scroll;
-  --scrollbar-color: $highlight;
-  --scrollbar-bg: $dark;
-  scrollbar-color: transparent transparent; /* Firefox */
-  scrollbar-width: thin;
-}
-body .search::-webkit-scrollbar {
-  width: 8px;
-}
-body .search::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0); /* Transparent */
-}
-body .search::-webkit-scrollbar-track {
-  background-color: rgba(0, 0, 0, 0); /* Transparent */
 }
 body .queue-list {
   padding: 0;
@@ -281,8 +260,7 @@ body .album-list .meta .title {
 .album-art {
   padding: 1em;
   flex: 1;
-  max-width: 24em;
-  width: 24em;
+  width: 100%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -297,9 +275,10 @@ body .album-list .meta .title {
 .album-art .cover {
   border: 1px solid rgba(68, 68, 51, 0.4);
   box-shadow: 1em 1em 1em rgba(17, 17, 34, 0.5333333333);
-  max-width: 20em;
+  max-width: 90%;
   border-radius: 1em;
   margin: 0.6em 0.3em;
+  max-height: 45vh;
 }
 .album-art .meta {
   padding: 0 1em;
@@ -337,9 +316,6 @@ body .album-list .meta .title {
   }
   body .queue-panel {
     order: 3;
-  }
-  body .panel {
-    width: 90%;
   }
   body .album-art {
     max-width: 16em;
