--- a/src/app/css/app.scss
+++ b/src/app/css/app.scss
@@ -421,7 +421,10 @@ body {
 				padding-right: 0;
 			}
 
-	
+			input {
+				width: 70%;
+				font-size: 12pt;
+			}
 		
 			.queue-panel {
 				order: 3;
