swapped draggable library for pangea, added local search

--- a/src/app/css/app.css
+++ b/src/app/css/app.css
@@ -218,17 +218,26 @@ body .extra .item, body .badge {
 }
 body .toggle {
   font-size: 0.8em;
+  height: 1em;
   position: relative;
+  width: 3.6em;
 }
 body .toggle .badge {
   position: absolute;
-  top: 1em;
-  left: 0.7em;
+  top: 0.2em;
+  left: 0.1em;
 }
 body .toggle .toggle-icon {
   top: 1.4em;
   position: absolute;
   left: 0.7em;
+}
+body .played {
+  opacity: 0.5;
+}
+body .playing .album-list {
+  border: 1px solid rgba(97, 97, 73, 0.4);
+  background-color: #252526;
 }
 body .album-list {
   border: 1px solid rgba(68, 68, 51, 0.4);
