--- a/src/app/css/app.scss
+++ b/src/app/css/app.scss
@@ -162,8 +162,8 @@ body {
 	
 	.toast {
 		position: absolute;
-		top: 0;
-		left: 0;
+		bottom: 0;
+		right: 1em;
 		font-size: 0.75em;
 		color: $dark;
 		.active {
