--- a/src/app/css/app.css
+++ b/src/app/css/app.css
@@ -100,6 +100,15 @@ body .volume-level .overlay {
   top: 0;
   left: 0;
 }
+body .seek-level {
+  position: relative;
+  font-size: 0.7em;
+  padding-top: 0.3em;
+}
+body .seek-level .overlay {
+  top: 0;
+  left: 0;
+}
 body .progress-container {
   width: 100%; /* Total width of the progress bar */
   height: 0.3em; /* Height of the progress bar */
@@ -110,7 +119,7 @@ body .progress-container {
 }
 body .progress-fill {
   height: 100%; /* Fill the entire height of the container */
-  background-color: rgba(97, 97, 73, 0.4); /* Fill color */
+  background-color: rgba(83, 83, 62, 0.4); /* Fill color */
   transition: width 0.5s ease-in-out; /* Smooth transition for width changes */
 }
 body .toast {
@@ -239,6 +248,20 @@ body .playing .album-list {
   border: 1px solid rgba(97, 97, 73, 0.4);
   background-color: #252526;
 }
+body .lyrics {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+body .lyrics li {
+  margin: 0.6em 0;
+}
+body .lyrics li.active {
+  font-weight: 700;
+  font-size: 1.3em;
+  margin: 1em 0;
+  color: #bcbcbb;
+}
 body .samples {
   font-size: 0.9em;
   height: 48vh;
@@ -311,7 +334,6 @@ body .album-list .meta .title {
 }
 
 .album-art {
-  padding: 1em;
   flex: 1;
   position: relative;
   width: 100%;
@@ -384,6 +406,9 @@ body .album-list .meta .title {
   }
   body .album-art .cover.single {
     max-width: 12em;
+  }
+  body .volume-buttons {
+    flex-wrap: nowrap;
   }
   html {
     color-scheme: dark;
